--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "license": "ISC",
   "dependencies": {
     "@graphql-tools/schema": "^10.0.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^14.7.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.4.2",
     "morgan": "^1.10.0"
   },
