--- a/frontend/frontendwithgraphql/package.json
+++ b/frontend/frontendwithgraphql/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
     "sweetalert2": "^11.7.32"
   },
   "devDependencies": {
